# defiwise-stellar

./: README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
contracts/: Cargo.toml
contracts/badge-nft/: Cargo.toml
contracts/badge-nft/src/: lib.rs  test.rs
contracts/badge-nft/test_snapshots/test/: test_cannot_mint_duplicate.1.json  test_different_users_same_module.1.json  test_mint_badge.1.json  test_multiple_badges.1.json
contracts/xp-token/: Cargo.toml
contracts/xp-token/src/: lib.rs  test.rs
contracts/xp-token/test_snapshots/test/: test_cannot_repeat_challenge.1.json  test_historical_never_decreases.1.json  test_initialize_and_reward.1.json  test_meets_requirement.1.json
src/app/: globals.css  layout.tsx  page.tsx
src/app/dashboard/: page.tsx
src/app/dashboard/events/: page.tsx
src/app/dashboard/logros/: EarnedCertificates.tsx  EarnedNfts.tsx  XPSummary.tsx  airdrop.tsx  certificado.tsx  membership.tsx  nft.tsx  page.tsx
src/app/dashboard/progress/: Compite.tsx  Progress.tsx
src/app/home/: Advantages.tsx  Hero.tsx  Methodology.tsx
src/components/: DashboardLayout.tsx  Footer.tsx  Header.tsx
src/components/asideMenu/: AsideMenu.tsx  AsideMenuBtn.tsx
src/components/modals/: ModalCertificate.tsx  ModalNFT.tsx
src/components/stellar/: ConnectWalletButton.tsx  OnChainStatus.tsx
src/data/: activityData.ts  certificateData.ts  courses.ts  data.ts  logrosData.ts  nftData.ts
src/hooks/: useProgress.ts  useStellarProgress.ts  useStellarWallet.ts
src/lib/: stellar.ts
(+9 files in other folders)
